--- a/MFAX01V3/App.xaml
+++ b/MFAX01V3/App.xaml
@@ -2,10 +2,14 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MFAX01V3"
-             StartupUri="Views/login.xaml">
+             StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
+            <local:ConvertBoolToImageSource x:Key="CvtBoolToImageSource"/>
             <local:LoginViewmodel x:Key="loginVM"/>
+            <local:InBoxViewModel x:Key="InboxVM"/>
+            <local:OutboxViewmodel x:Key="OutboxVM"/>
+            <local:MainWindowViewModel x:Key="MainWindowVM"/>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
