--- a/MFAX01V3/App.xaml
+++ b/MFAX01V3/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MFAX01V3"
+            
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -9,6 +10,7 @@
             <local:LoginViewmodel x:Key="loginVM"/>
             <local:InBoxViewModel x:Key="InboxVM"/>
             <local:OutboxViewmodel x:Key="OutboxVM"/>
+            <local:SentBoxViewModel x:Key="SentBoxVM"/>
             <local:MainWindowViewModel x:Key="MainWindowVM"/>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
