--- a/MFAX01V3/App.xaml
+++ b/MFAX01V3/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MFAX01V3"
             
-             StartupUri="Views/MainWindow.xaml">
+             StartupUri="Views/wndDanhBa.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <local:ConvertBoolToImageSource x:Key="CvtBoolToImageSource"/>
